tests/security/taintEscapedInTryMightNotWork/output.txt
ERROR: TaintedData - input.hack:13:6 - Detected tainted HTML tags